# albcovis-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
data/processed/craft_grid/: detections_text=0.3_link=0.1_low=0.4_size=1280.json  detections_text=0.3_link=0.1_low=0.4_size=500.json  detections_text=0.3_link=0.1_low=0.4_size=800.json  detections_text=0.3_link=0.2_low=0.4_size=1280.json  detections_text=0.3_link=0.2_low=0.4_size=500.json  detections_text=0.3_link=0.2_low=0.4_size=800.json  detections_text=0.3_link=0.4_low=0.4_size=1280.json  detections_text=0.3_link=0.4_low=0.4_size=500.json  detections_text=0.3_link=0.4_low=0.4_size=800.json  detections_text=0.3_link=0.6_low=0.4_size=1280.json  detections_text=0.3_link=0.6_low=0.4_size=500.json  detections_text=0.3_link=0.6_low=0.4_size=800.json  detections_text=0.5_link=0.1_low=0.4_size=1280.json  detections_text=0.5_link=0.1_low=0.4_size=500.json  detections_text=0.5_link=0.1_low=0.4_size=800.json  (+34 more)
data/source/: data_pool_20250813.csv  dev_set.json  dev_set_annotations_via_cocoformat.json
notebooks/: analysism.ipynb  color_extraction_tests.ipynb  human_face_detection_deepface_tests.ipynb  load_images.ipynb  tests_migration_pydantic.ipynb  tests_pydantic_models.ipynb  text_detection_craft_tests.ipynb
scripts/: build_analysis_set.py  build_dev_set.py  compare_craft_grid.py  compare_dominant_color_extraction_methods.py  compare_face_detection_backends.py  tune_cfdc_params.py
src/albcovis/: settings.py
src/api/: main.py
(+30 files in other folders)
